--- a/index.html
+++ b/index.html
@@ -76,19 +76,94 @@
     <div class="container">
     <h2 class="header-two">Nasz zespół</h2>
     <ul class="contact-list">
-        <li class="contact-list-item"><img class="contact-list-item-img" src="/goit-markup-hw-01/images/imgfourr.jpg" alt="Product designer" width="270" height="260">
+        <!--pierwsza osoba-->
+        <li class="contact-list-item">
+            <img class="contact-list-item-img" src="/goit-markup-hw-04/images/imgfourr.jpg" alt="Product designer" width="270" height="260">
+            <div class="contact-list-wrapper">
             <h3 class="header-three-contact">John Doe</h3>
             <p class="description-text-contact">Product Designer</p>
+            <ul class="contact-list-socialmedia">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"> <svg class="social-icon" width="20" height="20" >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a></li>                
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a></li>
+            </ul>
+            </div>
         </li>
-        <li class="contact-list-item"><img class="contact-list-item-img" src="/goit-markup-hw-01/images/imgfivee.jpg" alt="Frontend Developer" width="270" height="260">
-        <h3 class="header-three-contact">John Doe</h3>
-        <p class="description-text-contact">Frontend Developer</p></li>
-        <li class="contact-list-item"><img class="contact-list-item-img" src="/goit-markup-hw-01/images/imgsixx.jpg" alt="Marketing" width="270" height="260">
-        <h3 class="header-three-contact">John Doe</h3>
-        <p class="description-text-contact">Marketing</p></li>
-        <li class="contact-list-item"><img class="contact-list-item-img" src="/goit-markup-hw-01/images/imgsevenn.jpg" alt="UI Designer" width="270" height="260">
-        <h3 class="header-three-contact">John Doe</h3>
-        <p class="description-text-contact">UI Designer</p></li>
+        <!--druga osoba-->
+        <li class="contact-list-item">
+            <img class="contact-list-item-img" src="/goit-markup-hw-04/images/imgfivee.jpg" alt="Frontend Developer" width="270" height="260">
+            <div class="contact-list-wrapper">
+                <h3 class="header-three-contact">John Doe</h3>
+                <p class="description-text-contact">Frontend Developer</p>
+                <ul class="contact-list-socialmedia">
+                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg></a></li>
+                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a></li>
+                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg></a></li>
+                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a></li>
+                </ul>
+            </div>    
+        </li>
+        <!--trzecia osoba-->
+        <li class="contact-list-item">
+            <img class="contact-list-item-img" src="/goit-markup-hw-04/images/imgsixx.jpg" alt="Marketing" width="270" height="260">
+            <div class="contact-list-wrapper">
+            <h3 class="header-three-contact">John Doe</h3>
+            <p class="description-text-contact">Marketing</p>
+            <ul class="contact-list-socialmedia">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a></li>
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a></li>
+            </ul>
+            </div>
+        </li>
+        <!--czwarta osoba-->
+        <li class="contact-list-item">
+            <img class="contact-list-item-img" src="/goit-markup-hw-04/images/imgsevenn.jpg" alt="UI Designer" width="270" height="260">
+            <div class="contact-list-wrapper">
+            <h3 class="header-three-contact">John Doe</h3>
+            <p class="description-text-contact">UI Designer</p>
+            <ul class="contact-list-socialmedia">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                </svg></a></li>
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                </svg></a></li>
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg></a></li>
+            </ul>
+            </div>
+        </li>
     </ul>
     </div>
 </section>
