--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,12 @@
                 </ul>
             </nav>
             <div class="address">
-                <a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="address-phone" href="tel:48111111111">+48 111 111 111</a>
+                <a class="address-mail" href="mailto:info@devstudio.com"><svg class="mail-icon" width="16" height="12">
+                    <use href="./images/icons.svg#icon-mailicon"></use>
+                </svg>info@devstudio.com</a>
+                <a class="address-phone" href="tel:48111111111"><svg class="phone-icon" width="10" height="16">
+                    <use href="./images/icons.svg#icon-phoneicon"></use>
+                </svg>+48 111 111 111</a>
             </div>
         </div>
     </header>
