--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
         </ul>
     </nav>
             <div class="address"> 
-            <a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="address-phone" href="tel:48111111111">+48 111 111 111</a> 
+            <a class="address-mail" href="mailto:info@devstudio.com"><svg class="mail-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-mailicon"></use>
+            </svg>info@devstudio.com</a>
+            <a class="address-phone" href="tel:48111111111"><svg class="phone-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-phoneicon"></use>
+            </svg>+48 111 111 111</a> 
             </div>
     </div>
 </header>  
@@ -46,15 +50,27 @@
   <section class="agency">
     <div class="container" >
      <ul class="agency-box">
-         <li class="agency-box-box"><h3 class="header-three">LOREM IPSUM</h3>
+         <li class="agency-box-box"><svg width="270" height="120">
+             <use class="lorem-icon" href="./images/icons.svg#icon-antenna" ></use>
+         </svg>
+            <h3 class="header-three">LOREM IPSUM</h3>
             <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada</p></li>
-         <li class="agency-box-box"><h3  class="header-three">LOREM IPSUM</h3>
+         <li class="agency-box-box"><svg width="270" height="120">
+            <use class="lorem-icon" href="./images/icons.svg#icon-clock"></use>
+        </svg>
+        <h3  class="header-three">LOREM IPSUM</h3>
             <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
         </p></li>
-         <li class="agency-box-box"><h3  class="header-three">LOREM IPSUM</h3>
+         <li class="agency-box-box"><svg width="270" height="120">
+            <use class="lorem-icon" href="./images/icons.svg#icon-diagram"></use>
+        </svg>
+        <h3  class="header-three">LOREM IPSUM</h3>
             <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
         </p></li>
-         <li class="agency-box-box"><h3  class="header-three">LOREM IPSUM</h3>
+         <li class="agency-box-box"><svg width="270" height="120">
+            <use class="lorem-icon" href="./images/icons.svg#icon-astronaut"></use>
+        </svg>
+        <h3  class="header-three">LOREM IPSUM</h3>
             <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
         </p></li>
      </ul> 
@@ -83,16 +99,16 @@
             <h3 class="header-three-contact">John Doe</h3>
             <p class="description-text-contact">Product Designer</p>
             <ul class="contact-list-socialmedia">
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"> <svg class="social-icon" width="20" height="20" >
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"> <svg class="social-icon" >
                     <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a></li>                
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
             </ul>
@@ -105,16 +121,16 @@
                 <h3 class="header-three-contact">John Doe</h3>
                 <p class="description-text-contact">Frontend Developer</p>
                 <ul class="contact-list-socialmedia">
-                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg></a></li>
-                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg></a></li>
-                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                         <use href="./images/icons.svg#icon-facebook"></use>
                     </svg></a></li>
-                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                    <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg></a></li>
                 </ul>
@@ -127,16 +143,16 @@
             <h3 class="header-three-contact">John Doe</h3>
             <p class="description-text-contact">Marketing</p>
             <ul class="contact-list-socialmedia">
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" ">
                     <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
             </ul>
@@ -149,16 +165,16 @@
             <h3 class="header-three-contact">John Doe</h3>
             <p class="description-text-contact">UI Designer</p>
             <ul class="contact-list-socialmedia">
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="20" height="20">
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
                     <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
             </ul>
@@ -168,16 +184,97 @@
     </div>
 </section>
 
+<!--nasi klienci-->
+
+<section class="clients">
+    <div class="container">
+        <h2 class="header-two">Nasi klienci</h2>
+        <ul class="clients-list">
+            <li class="clients-list-items">
+                <a href="#"><svg class="clients-icons" width="106" height="60">
+                    <use href="./images/icons.svg#icon-Logoyaco"></use>
+                </svg></a>
+            </li>
+            <li class="clients-list-items">
+                <a href="#"><svg class="clients-icons" width="106" height="60">
+                        <use href="./images/icons.svg#icon-Logotwoflags"></use>
+                    </svg></a>
+
+            </li>
+            <li class="clients-list-items">
+                <a href="#"><svg class="clients-icons" width="106" height="60">
+                        <use href="./images/icons.svg#icon-Logothree"></use>
+                    </svg></a>
+
+            </li>
+            <li class="clients-list-items">
+                <a href="#"><svg class="clients-icons" width="106" height="60">
+                        <use href="./images/icons.svg#icon-Logofosters"></use>
+                    </svg></a>
+
+            </li>
+            <li class="clients-list-items">
+                <a href="#"><svg class="clients-icons" width="106" height="60">
+                        <use href="./images/icons.svg#icon-Logobrand"></use>
+                    </svg></a>
+
+            </li>
+            <li class="clients-list-items">
+                <a href="#"><svg class="clients-icons" width="106" height="60">
+                        <use href="./images/icons.svg#icon-Logotagline"></use>
+                    </svg></a>
+
+            </li>
+        </ul>
+
+    </div>
+</section>
+
 </main>
 
  <footer class="endpage">
     <div class="container" >
+    <div class="left-footer" > 
     <a class="logoend" href="index.html"> <span class="logo-dizajn-end">Web</span>Studio </a>
     <address class="address">
         m. Warszawa, Aleje Jerozolimskie 21 <br>
      <a class="address-mail" href="mailto:info@example.com">info@example.com</a> <br>
      <a class="address-phone" href="tel:48111111111">+48 111 111 111 </a> <br>
     </address>
+    </div>
+    <div class="right-footer">
+        <p class="right-header">DOŁĄCZ DO NAS</p>
+        <ul class="right-icon-list">
+            <li class="right-icons">
+                <a class="right-icons-link">
+                    <svg class="footer-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a> 
+            </li>
+            <li class="right-icons">
+                <a class="right-icons-link">
+                    <svg class="footer-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="right-icons">
+                <a class="right-icons-link">
+                    <svg class="footer-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="right-icons">
+                <a class="right-icons-link">
+                    <svg class="footer-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
     </div>
 
 
