--- a/portfolio.html
+++ b/portfolio.html
@@ -116,14 +116,48 @@
     </main>
 
     <footer class="endpage">
-        <div class="container" >
-
-        <a class="logoend" href="index.html"> <span class="logo-dizajn-end">Web</span>Studio </a>
-        <address class="address">
-            m. Warszawa, Aleje Jerozolimskie 21 <br>
-         <a class="address-mail" href="mailto:info@example.com">info@example.com</a> <br>
-         <a class="address-phone" href="tel:48111111111">+48 111 111 111 </a> <br>
-        </address>
+        <div class="container">
+            <div class="left-footer">
+                <a class="logoend" href="index.html"> <span class="logo-dizajn-end">Web</span>Studio </a>
+                <address class="address">
+                    m. Warszawa, Aleje Jerozolimskie 21 <br>
+                    <a class="address-mail" href="mailto:info@example.com">info@example.com</a> <br>
+                    <a class="address-phone" href="tel:48111111111">+48 111 111 111 </a> <br>
+                </address>
+            </div>
+            <div class="right-footer">
+                <p class="right-header">DOŁĄCZ DO NAS</p>
+                <ul class="right-icon-list">
+                    <li class="right-icons">
+                        <a class="right-icons-link">
+                            <svg class="footer-icon">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="right-icons">
+                        <a class="right-icons-link">
+                            <svg class="footer-icon">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="right-icons">
+                        <a class="right-icons-link">
+                            <svg class="footer-icon">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="right-icons">
+                        <a class="right-icons-link">
+                            <svg class="footer-icon">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     
     
