--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -50,24 +50,24 @@
   <section class="agency">
     <div class="container" >
      <ul class="agency-box">
-         <li class="agency-box-box"><svg width="270" height="120">
+         <li class="agency-box-box"><svg class="agency-icon" width="270" height="120">
              <use class="lorem-icon" href="./images/icons.svg#icon-antenna" ></use>
          </svg>
             <h3 class="header-three">LOREM IPSUM</h3>
             <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada</p></li>
-         <li class="agency-box-box"><svg width="270" height="120">
+         <li class="agency-box-box"><svg class="agency-icon" width="270" height="120">
             <use class="lorem-icon" href="./images/icons.svg#icon-clock"></use>
         </svg>
         <h3  class="header-three">LOREM IPSUM</h3>
             <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
         </p></li>
-         <li class="agency-box-box"><svg width="270" height="120">
+         <li class="agency-box-box"><svg class="agency-icon" width="270" height="120">
             <use class="lorem-icon" href="./images/icons.svg#icon-diagram"></use>
         </svg>
         <h3  class="header-three">LOREM IPSUM</h3>
             <p class="description-text">Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Nam vel arcu sem. Sed <br> non sodales dui. Interdum et malesuada
         </p></li>
-         <li class="agency-box-box"><svg width="270" height="120">
+         <li class="agency-box-box"><svg class="agency-icon" width="270" height="120">
             <use class="lorem-icon" href="./images/icons.svg#icon-astronaut"></use>
         </svg>
         <h3  class="header-three">LOREM IPSUM</h3>
@@ -99,16 +99,16 @@
             <h3 class="header-three-contact">John Doe</h3>
             <p class="description-text-contact">Product Designer</p>
             <ul class="contact-list-socialmedia">
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"> <svg class="social-icon" >
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"> <svg class="social-icon" width="20" height="20" >
                     <use href="./images/icons.svg#icon-instagram"></use>
                 </svg></a></li>                
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon"width="27" height="26">
                     <use href="./images/icons.svg#icon-twitter"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="27" height="26">
                     <use href="./images/icons.svg#icon-facebook"></use>
                 </svg></a></li>
-                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" >
+                <li class="socialmedia-item"> <a class="socialmedia-link" href="#"><svg class="social-icon" width="27" height="26">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg></a></li>
             </ul>
