--- a/index.html
+++ b/index.html
@@ -191,36 +191,36 @@
         <h2 class="header-two">Nasi klienci</h2>
         <ul class="clients-list">
             <li class="clients-list-items">
-                <a href="#"><svg class="clients-icons" width="106" height="60">
+                <a class="clients-link" href="#"><svg class="clients-icons" width="106" height="60">
                     <use href="./images/icons.svg#icon-Logoyaco"></use>
                 </svg></a>
             </li>
             <li class="clients-list-items">
-                <a href="#"><svg class="clients-icons" width="106" height="60">
+                <a class="clients-link" href="#"><svg class="clients-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logotwoflags"></use>
                     </svg></a>
 
             </li>
             <li class="clients-list-items">
-                <a href="#"><svg class="clients-icons" width="106" height="60">
+                <a class="clients-link" href="#"><svg class="clients-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logothree"></use>
                     </svg></a>
 
             </li>
             <li class="clients-list-items">
-                <a href="#"><svg class="clients-icons" width="106" height="60">
+                <a class="clients-link" href="#"><svg class="clients-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logofosters"></use>
                     </svg></a>
 
             </li>
             <li class="clients-list-items">
-                <a href="#"><svg class="clients-icons" width="106" height="60">
+                <a class="clients-link" href="#"><svg class="clients-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logobrand"></use>
                     </svg></a>
 
             </li>
             <li class="clients-list-items">
-                <a href="#"><svg class="clients-icons" width="106" height="60">
+                <a class="clients-link" href="#"><svg class="clients-icons" width="106" height="60">
                         <use href="./images/icons.svg#icon-Logotagline"></use>
                     </svg></a>
 
@@ -247,28 +247,28 @@
         <ul class="right-icon-list">
             <li class="right-icons">
                 <a class="right-icons-link">
-                    <svg class="footer-icon">
+                    <svg class="footer-icon" width="44" height="44">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a> 
             </li>
             <li class="right-icons">
                 <a class="right-icons-link">
-                    <svg class="footer-icon">
+                    <svg class="footer-icon" width="44" height="44">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="right-icons">
                 <a class="right-icons-link">
-                    <svg class="footer-icon">
+                    <svg class="footer-icon" width="44" height="44">
                         <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="right-icons">
                 <a class="right-icons-link">
-                    <svg class="footer-icon">
+                    <svg class="footer-icon" width="44" height="44">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
